# CmakeTest

./: readme.txt  settings.gradle
TestMultiShared/: build.gradle
TestMultiShared/src/androidTest/java/com/kevin/testmultishared/: ExampleInstrumentedTest.java
TestMultiShared/src/main/: AndroidManifest.xml
TestMultiShared/src/main/cpp/: CMakeLists.txt
TestMultiShared/src/main/cpp/lic/: CMakeLists.txt  des.h
TestMultiShared/src/main/cpp/pin/: CMakeLists.txt  des.h
TestMultiShared/src/main/cpp/serialport/: CMakeLists.txt  des.cpp
TestMultiShared/src/test/java/com/kevin/testmultishared/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kevin/cmaketest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kevin/cmaketest/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kevin/cmaketest/: ExampleUnitTest.java
dependenciesOther/: CMakeLists.txt  build.gradle  config.h.in
dependenciesOther/src/androidTest/java/com/kevin/dependenciesother/: ExampleInstrumentedTest.java
dependenciesOther/src/main/: AndroidManifest.xml
dependenciesOther/src/main/cpp/: test.cpp
dependenciesOther/src/main/cpp/include/: pp1000.h
dependenciesOther/src/test/java/com/kevin/dependenciesother/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
